integrate boutton in html

--- a/index.html
+++ b/index.html
@@ -8,19 +8,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+      <div id="container">
+    <h1>Calculatrice</h1>
+          <div id="calculatrice">
+              <div id="header">
+                  <input type="text" id="number" value="0" autocomplete="off" disabled />
+              </div>
+              <div id="body">
+                  <div class="buttons">7</div>
+                  <div class="buttons">8</div>
+                  <div class="buttons">9</div>
+                  <div class="buttons">/</div>
+                  <div class="buttons">4</div>
+                  <div class="buttons">5</div>
+                  <div class="buttons">6</div>
+                  <div class="buttons">*</div>
+                  <div class="buttons">1</div>
+                  <div class="buttons">2</div>
+                  <div class="buttons">3</div>
+                  <div class="buttons">-</div>
+                  <div class="buttons">0</div>
+                  <div class="buttons">.</div>
+                  <div class="buttons">=</div>
+                  <div class="buttons">+</div>
+              </div>
+          </div>
+      </div>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
