--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-
+<link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -22,22 +22,22 @@
                   <input type="text" id="number" value="0" autocomplete="off" disabled />
               </div>
               <div id="body">
-                  <div class="buttons">7</div>
-                  <div class="buttons">8</div>
                   <div class="buttons">9</div>
+                  <div class="buttons">8</div>
                   <div class="buttons">/</div>
-                  <div class="buttons">4</div>
-                  <div class="buttons">5</div>
+                  <div class="buttons">7</div>
                   <div class="buttons">6</div>
                   <div class="buttons">*</div>
-                  <div class="buttons">1</div>
+                  <div class="buttons">4</div>
+                  <div class="buttons">5</div>
+                  <div class="buttons">-</div>
                   <div class="buttons">2</div>
                   <div class="buttons">3</div>
-                  <div class="buttons">-</div>
-                  <div class="buttons">0</div>
-                  <div class="buttons">.</div>
-                  <div class="buttons">=</div>
                   <div class="buttons">+</div>
+                  <div class="buttons">0</div>
+                  <div class="buttons">1</div>
+                  <div class="buttons">=</div>
+                  <div class="buttons">.</div>
               </div>
           </div>
       </div>
