--- a/index.html
+++ b/index.html
@@ -1,61 +1,34 @@
 <!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="fr">
+	<head>
+		<!--Meta-->
+		<meta charset ="UTF-8">
+		<meta name    ="author" content="">
+		<meta name    ="description" content="">
+		<!--link externe-->
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<!-- Font -->
 
-<link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-      <div id="container">
-    <h1>Calculatrice</h1>
-          <div id="calculatrice">
-              <div id="header">
-                  <input type="text" id="number" value="0" autocomplete="off" disabled />
-              </div>
-              <div id="body">
-                  <div class="buttons">9</div>
-                  <div class="buttons">8</div>
-                  <div class="buttons">/</div>
-                  <div class="buttons">7</div>
-                  <div class="buttons">6</div>
-                  <div class="buttons">*</div>
-                  <div class="buttons">4</div>
-                  <div class="buttons">5</div>
-                  <div class="buttons">-</div>
-                  <div class="buttons">2</div>
-                  <div class="buttons">3</div>
-                  <div class="buttons">+</div>
-                  <div class="buttons">0</div>
-                  <div class="buttons">1</div>
-                  <div class="buttons">=</div>
-                  <div class="buttons">.</div>
-              </div>
-          </div>
-      </div>
+		<!--link interne-->
+      <link rel="stylesheet" href="css/style.css">
+		<!--Titre-->
+		<title>calculatrice</title>
+	</head>
 
+	<body>
+		<header>
+		</header>
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+		<main id="main">
+         <div id="resultat"></div>
+			<table id="table"></table>
+			<div id="clear">Clear</div>
+		</main>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+		<footer>
+		</footer>
+		<!-- Script -->
+		<script src   ="js/main.js"></script>
+      <script>init()</script>
+	</body>
 </html>
